--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-simpleconf = "^0.5.7"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
 pytest-cov = "^4.0.0"
+python-simpleconf = {version = "^0.5.7", extras = ["toml"]}
 
 [build-system]
 requires = ["poetry-core"]
