--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [tool.poetry]
-name = "argparse-charged"
+name = "argx"
 version = "0.0.1"
 description = "Super-charged argparse for python"
 authors = ["pwwang <pwwang@pwwang.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "argparse_charged"}]
 
 [tool.poetry.dependencies]
 python = "^3.7"
@@ -28,7 +27,7 @@ show_error_codes = true
 strict_optional = false
 
 [tool.pytest.ini_options]
-addopts = "-vv --cov-config=.coveragerc --cov=argparse_charged --cov-report xml:.coverage.xml --cov-report term-missing"
+addopts = "-vv --cov-config=.coveragerc --cov=argx --cov-report xml:.coverage.xml --cov-report term-missing"
 filterwarnings = [
     #"error"
 ]
