--- a/tests/configs/config.toml
+++ b/tests/configs/config.toml
@@ -42,6 +42,7 @@ description = "cmd1 description"
 
 [[commands.arguments]]
 flags = ["-c", "--ccc"]
+help = "ccc help\nddd"
 default = 3
 
 [[commands.commands]]
