feat: add anypath type support
- Added `cloudpathlib` as an optional dependency in `pyproject.toml`.
- Defined an extra `anypath` that includes `cloudpathlib`.
- Implemented a new test `test_anypath` in `tests/test_type.py` to validate the parsing of `anypath` arguments, supporting both S3 and local paths.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
           python -m pip install --upgrade mypy
           python -m pip install poetry
           poetry install -v
+          poetry run pip install cloudpathlib[s3]
       - name: Run flake8
         run: flake8 argx
       - name: Run mypy
