chore: update dependency from cloudpathlib to panpath in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ generate-setup-file = true
 [tool.poetry.dependencies]
 python = "^3.9"
 python-simpleconf = "^0.7"
-cloudpathlib = {version = "^0.21", optional = true}
+panpath = {version = "^0.4", optional = true}
 
 [tool.poetry.extras]
-anypath = ["cloudpathlib"]
+anypath = ["panpath"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8"
