--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ panpath = {version = "^0.4", optional = true}
 
 [tool.poetry.extras]
 anypath = ["panpath"]
+panpath = ["panpath"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8"
